2018-10-23 belangeo <belangeo@gmail.com>

    * Epyo: Added multiple views (splitted windows) functionnality.

2018-10-22 belangeo <belangeo@gmail.com>

    * Epyo Doc: Bug fixes and added zoomin/zoomout function.

2018-10-21 belangeo <belangeo@gmail.com>

    * Epyo: Added a 'Reload Current File' menu command.

2018-10-21 belangeo <belangeo@gmail.com>

    * Epyo: Added auto complete for cpp file (from corresponding header file).

2018-10-05 belangeo <belangeo@gmail.com>

    * Merged E-Pyo and PyoDoc in a single file (now in pyolib/editor/EPyo.py).

2018-10-05 belangeo <belangeo@gmail.com>

    * Modified setup.py to be pip compliant.

2018-10-04 belangeo <belangeo@gmail.com>

    * E-Pyo: Fixed crash when trying to read a faulty preferences file.

2018-09-06 belangeo <belangeo@gmail.com>

    * Added PYO_SERVER_MIDI and PYO_SERVER_WINHOST environment variables to set
      default values for the audio server.

2018-09-04 belangeo <belangeo@gmail.com>

    * Upgraded version number to 0.9.1.

2018-09-04 belangeo <belangeo@gmail.com>

    * On Windows, use 'directsound' as the default audio host (much more 
      reliable than 'wasapi').

2018-05-30 belangeo <belangeo@gmail.com>

    * Fixed phase shifting between the frequency bands of FourBand and MultiBand.

2018-04-24 belangeo <belangeo@gmail.com>

    * Added a new object: MultiBand, frequency splitter using Linkwitz-Riley 
      crossover filters.

2018-04-17 belangeo <belangeo@gmail.com>

    * Fixed Compress output level when input's rms is above unity.

2018-03-04 belangeo <belangeo@gmail.com>

    * Added the ability to remove a project from the project tree.

2018-03-02 belangeo <belangeo@gmail.com>

    * Added getPrecision() function. Removed print statement when importing pyo.
      User should use getVersion() and getPrecision() functions if needed.

2018-03-02 belangeo <belangeo@gmail.com>

    * Fixed crash when asking for more input or output channels than available.
